Started working on cookies, changed colors in results page

--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -10,9 +10,9 @@
 {% block page_content %} 
     <div class="col-sm-4">    
         <a href="javascript:history.go(0)">
-            <button class="btn btn-danger" type="button">Next Step (refresh) </button>
+            <button class="btn btn-danger" type="button"> Refresh Page </button>
         </a>
-        <button id="refresh_button" class="btn btn-success" type="button"> Next Step (AJAX) </button>
+        <button id="refresh_button" class="btn btn-success" type="button"> Next Step</button>
     </div>
     <div class="col-sm-4" id="npc_div" style='position:relative'></div>
     <div class="col-sm-4">
