--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -4,16 +4,15 @@
 <head>
     <title>{% block title %}ACOR-E{% endblock title %}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
 
     {% block css %}{% endblock css %}
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     {% block js %}{% endblock js %}
 </head>
 <body>
-    <!-- Fixed navbar at the top of the pgae -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -21,25 +20,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"> Yathi's Game</a>
+          <a class="navbar-brand" href="/">The Game</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="collapse navbar-collapse" id="general_navbar">
           <ul class="nav navbar-nav">
             <li><a href="/acore">ACOR-E</a></li>
+            <li><a href="/contact">Contact</a></li>
             <li><a href="/surveys/questions/">Survey</a></li>
             <li><a href="/surveys/results/">Results</a></li>
-            <li><a href="/contact">Contact</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
+    </nav>
+
+
+
+
+
+
+
     <div class="jumbotron">
         <div class="container">{% block page_title %}{% endblock page_title %} </div>
     </div>
     <div class="container">
         {% block page_content %}{% endblock page_content %}
     </div>
-
 
 </body>
 </html>
