--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -36,6 +36,7 @@
         padding: 4px;
         text-align: center;
         border-radius: 2px;
+        height: 30px;
     }
 
     .neutral_bar{
@@ -114,20 +115,58 @@
         }
 
         function getEmotionPercent(emotions, n){
+            //TODO the issue here is that the the values are less than 0, and this is passing the front half of the string, rather htan teh back half
+            // when it sees teh period, it should send the next non- zero end of teh subsgtring. as in -- if the number is -0.06, after it sees the
+            // '.' it should send teh rest of the substring. confirm they can never be longer than 2 decimals
             switch(n){
                 case 0:
-                    //joy
-                    var joy = parseFloat(emotionList[0].substring(4));
-                    return (parseInt(joy*100)).toString()
+                    var joy_string = emotions[0].substring(4);
+                    for(var i = 0; i < joy_string.length ; i ++){
+                        $('<p> JoyString:' + joy_string +' currentChar: ' + joy_string.charAt(i) + '</p>').prependTo('#npc_div');
+                        if(joy_string.charAt(i) == '.'){
+                            if(joy_string.charAt(0) == '-'){
+                                return joy_string.substring(1,i);
+                            }
+                            return joy_string.substring(0,i);
+                        }
+                    }
+                    break;
                 case 1:
-                    var hope = parseFloat(emotionList[1].substring(5));
-                    return (parseInt(hope*100)).toString()
+                    var hope_string = emotions[0].substring(5);
+                    for(var i = 0; i < hope_string.length ; i ++){
+                        $('<p> hopestring: ' + hope_string +'currentChar: ' + hope_string.charAt(i) + '</p>').prependTo('#npc_div');
+                        if(hope_string.charAt(i) == '.'){
+                            if(hope_string.charAt(0) == '-'){
+                                return hope_string.substring(1,i);
+                            }
+                            return hope_string.substring(0,i);
+                        }
+                    }
+                    break;
                 case 2:
-                    var fear = parseFloat(emotionList[2].substring(5));
-                    return (parseInt(fear*100)).toString()
+                    var fear_string = emotions[0].substring(5);
+                    for(var i = 0; i < fear_string.length ; i ++){
+                        $('<p> fear_string:' + fear_string + 'cur char:' + fear_string.charAt(i) +'</p>').prependTo('#npc_div');
+                        if(fear_string.charAt(i) == '.'){
+                            if(fear_string.charAt(0) == '-'){
+                                return fear_string.substring(1,i);
+                            }
+                            return fear_string.substring(0,i);
+                        }
+                    }
+                    break;
                 case 3:
-                    var sorrow = parseFloat(emotionList[3].substring(7));
-                    return (parseInt(sorrow*100)).toString()
+                    var sorrow_string = emotions[0].substring(7);
+                    for(var i = 0; i < sorrow_string.length ; i ++){
+                        $('<p> sorrow_string' + sorrow_string + 'cur char:' +  sorrow_string.charAt(i) + '</p>').prependTo('#npc_div');
+                        if(sorrow_string.charAt(i) == '.'){
+                            if(sorrow_string.charAt(0) == '-'){
+                                return sorrow_string.substring(1,i);
+                            }
+                            return sorrow_string.substring(0,i);
+                        }
+                    }
+                    break;
             }
         }
 
@@ -152,14 +191,14 @@
                     </div> \
                     <div class='col-sm-5'> \
                         <dl style='width:100%'> \
-                            <dt>Joy   </dt> \
-                            <dd><div id='joybar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_joy_percent }}%'> {{npc.getEmotion | get_joy_percent }}%</div></dd> \
-                            <dt>Hope  </dt> \
-                            <dd><div id='hopebar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_hope_percent}}%'> {{npc.getEmotion | get_hope_percent}}%</div></dd> \
-                            <dt>Fear  </dt> \
-                            <dd><div id='fearbar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_fear_percent}}%'> {{npc.getEmotion | get_fear_percent}}%</div></dd> \
-                            <dt>Sorrow</dt> \
-                            <dd><div id='sorrowbar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_sorrow_percent}}%'>{{npc.getEmotion | get_sorrow_percent}}%</div></dd> \
+                            <dt id='joytext_{{npc.sayHello}}'> Joy {{npc.getEmotion | get_joy_percent }}%</dt> \
+                            <dd><div id='joybar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_joy_percent }}%'> &nbsp</div></dd> \
+                            <dt id='hopetext_{{npc.sayHello}}'> Hope  {{npc.getEmotion | get_hope_percent}}%</dt> \
+                            <dd><div id='hopebar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_hope_percent}}%'> &nbsp</div></dd> \
+                            <dt id='feartext_{{npc.sayHello}}'> Fear {{npc.getEmotion | get_fear_percent}}%</dt> \
+                            <dd><div id='fearbar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_fear_percent}}%'> &nbsp </div></dd> \
+                            <dt id='sorrowtext_{{npc.sayHello}}'>Sorrow {{npc.getEmotion | get_sorrow_percent}}%</dt> \
+                            <dd><div id='sorrowbar_{{npc.sayHello}}' class='graph_bar neutral_bar' style='width: {{npc.getEmotion | get_sorrow_percent}}%'> &nbsp </div></dd> \
                         </dl> \
                     </div> \
                 </div>").appendTo('#npc_div');
@@ -223,18 +262,20 @@
                         $('#resources_'+ name_list[i]).text("Resources: " + formatSpaces(resource_list[i]));
                         $('#newresources_'+ name_list[i]).text("New Resources: " + formatSpaces(newresource_list[i]));
                         $("#npc_child_"+ (i+1)).attr('class', getPanelClass(action_list[i]));
-                        //graph stuff
-                        //$('#joybar_' + name_list[i]).text(getEmotionPercent(emotion_list[i], 0));
-                        //$('#joybar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 0) + '%');
-                        //$('#hopebar_' + name_list[i]).text(getEmotionPercent(emotion_list[i], 1));
-                        //$('#hopebar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 1) +'%');
-                        //$('#fearbar_' + name_list[i]).text(getEmotionPercent(emotion_list[i], 2));
-                        //$('#fearbar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 2) + '%');                        
-                        $('#sorrowbar_' + name_list[i]).text(getEmotionPercent(emotion_list[i], 3));
-                        $('#sorrowbar_'+name_list[i]).width('40' + '%');
-                        //side view stuff
+                        
                         $('#scoreboard_' + (i+1)).attr('class', getAlertClass(action_list[i]));
                         $('#scoreboard_' + (i+1)).html(name_list[i]);
+
+                        //graph stuff
+                        $('#joytext_' + name_list[i]).text('Joy ' + getEmotionPercent(emotion_list[i], 0) + '%');
+                        $('#joybar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 0) + '%');
+                        $('#hopetext_' + name_list[i]).text('Hope ' + getEmotionPercent(emotion_list[i], 1) + '%');
+                        $('#hopebar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 1) +'%');
+                        $('#feartext_' + name_list[i]).text('Fear ' + getEmotionPercent(emotion_list[i], 2) + '%');
+                        $('#fearbar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 2) + '%');                        
+                        $('#sorrowtext_' + name_list[i]).text('Sorrow ' + getEmotionPercent(emotion_list[i], 3) + '%');
+                        $('#sorrowbar_'+name_list[i]).width(getEmotionPercent(emotion_list[i], 3) + '%');
+
                     }
 
             }
